src/test/ui/hr-subtype/hr-subtype.free_x_vs_free_y.stderr
error[E0308]: mismatched types
  --> $DIR/hr-subtype.rs:45:26
   |
LL |               gimme::<$t1>(None::<$t2>);
   |                            ^^^^^^^^^^^ lifetime mismatch
...
LL | / check! { free_x_vs_free_y: (fn(&'x u32),
LL | | fn(&'y u32)) }
   | |______________- in this macro invocation
   |
   = note: expected enum `Option<fn(&'x u32)>`
              found enum `Option<fn(&'y u32)>`
note: the lifetime `'x` as defined here...
  --> $DIR/hr-subtype.rs:44:22
   |
LL |           fn supertype<'x, 'y: 'x, 'z: 'y>() {
   |                        ^^
...
LL | / check! { free_x_vs_free_y: (fn(&'x u32),
LL | | fn(&'y u32)) }
   | |______________- in this macro invocation
note: ...does not necessarily outlive the lifetime `'y` as defined here
  --> $DIR/hr-subtype.rs:44:26
   |
LL |           fn supertype<'x, 'y: 'x, 'z: 'y>() {
   |                            ^^
...
LL | / check! { free_x_vs_free_y: (fn(&'x u32),
LL | | fn(&'y u32)) }
   | |______________- in this macro invocation
   = note: this error originates in the macro `check` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
